--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* background-color: #20265e; */
+  background-color: #20265e;
+  color: white;
 }
 
 a {
@@ -14,4 +15,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.ant-slider-mark-text-active {
+  color: white;
+}
+
+.ant-slider-mark-text {
+  color: white;
 }
