main part - cards with caravans

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
 
 #__next {
   /* max-width: 1440px; */
-  margin: 0 auto;
+  margin: 0 auto 100px;
 }
 
 a {
@@ -19,4 +19,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.ant-card-body {
+  padding: 16px;
 }
